tests/NormalTests/paczka1/fuzzy1/67219213.err
Error in line 4: KcsboC A806 86,2
Error in line 16: mAeC5n3NCW A806 87,7
Error in line 26: A364 S717 57,4
Error in line 32: A364 A364 92,9
Error in line 39: dDwb0h S717 v4,7
